--- a/example.env
+++ b/example.env
@@ -3,6 +3,6 @@ REACT_APP_THEME=dark
 REACT_APP_COLOR=#2F80FF
 REACT_APP_LOGO=
 REACT_APP_FONT=Inter
-REACT_APP_TOKEN_GENERATION_ENDPOINT=https://prod-in2.100ms.live/hmsapi/web3factory-live.app.100ms.live/
+REACT_APP_TOKEN_GENERATION_ENDPOINT=<Your Token Endpoint>
 REACT_APP_ENV=prod
 REACT_APP_LOGROCKET_ID=<Your Logrocket project ID>
